test: make immersive source check Java 8 compatible